@@ -18,12 +18,17 @@ LanguageTool Change Log
 -Russian:
     -added/improved several rules
 
+
 -Rule Syntax:
     -<short>...</short> can now be added to a rulegroup to affect all the rules
      of that group
 
 -API:
     -removed classes and methods that had been deprecated since 2.7 or longer
+
+-Embedded server:
+    -the config file options 'requestLimit' and 'requestLimitPeriodInSeconds' can
+     now also be used for the HTTP server (not just for the HTTPS server)
 
 
 2.7 (2014-09-29)
